# candle_demo_yolov8

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
