[package]
name = "candle_demo_yolov8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
candle = {git = "https://github.com/huggingface/candle.git", package = "candle-core", version = "0.5.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
clap = { version = "4.5.4", features = ["derive"] }
hf-hub = "0.3.2"
image = { version = "0.25.1", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.25.0", default-features = false }
rusttype = "0.9.3"
tokenizers = "0.19.1"
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
ab_glyph = "0.2.25"
serde_plain = "1.0.2"
serde_json = "1.0.99"

